# MSLogistics-backend

./: Dockerfile  database.py  docker-compose.yml  main.py  manage.py  models.py  pyproject.toml  responses.py  serializer.py  views.py
tests/: test_base.py
views/: entradas_saidas.py  fabricantes.py  generic.py  mercadoria.py  operacao.py  tipo_operacao.py  tipos.py  tipos_mercadoria.py  usuario.py
